# sme_mb

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
db/: schema.sql
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DEPLOYMENT.md
scripts/: run_backtest.py  run_pipeline.py  start_terminal.sh  stop_terminal.sh
src/smescanner/: __init__.py  config.py
src/smescanner/ai/: agent.py  llm.py  report_reader.py
src/smescanner/backtest/: engine.py
src/smescanner/common/: http.py  ratelimit.py
src/smescanner/dashboard/: app.py
src/smescanner/db/: __init__.py  session.py
src/smescanner/etl/: __init__.py
src/smescanner/live/: __init__.py  service.py  xts.py
src/smescanner/scoring/: business_quality.py  financial_quality.py  management_quality.py  metrics.py  multibagger.py  verdict.py
src/smescanner/scrapers/: bse_corp.py  nse_corp.py  screener.py  trendlyne.py
src/smescanner/universe/: __init__.py  bse_sme.py  builder.py  nse_emerge.py
tests/: test_metrics.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/bulk-deals/: page.tsx
web/app/company/[id]/: page.tsx
web/app/red-flags/: page.tsx
web/components/: AnalysisCharts.tsx  Band.tsx  BulkDealsTable.tsx  DeepAnalysis.tsx  DepthLadder.tsx  InvestorView.tsx  InvestorsPanel.tsx  LiveChart.tsx  LivePrice.tsx  Nav.tsx  NewsFeed.tsx  PeersTable.tsx  RankTable.tsx  ScoreBar.tsx  ShareholdingPanel.tsx  StatCards.tsx
web/lib/: analysis.ts  db.ts  format.ts  live.ts  queries.ts
