[project]
name = "sme-multibagger-scanner"
version = "0.1.0"
description = "Fundamentals-first multibagger scanner for NSE Emerge / BSE SME"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
